# termux-rs

./: Cargo.toml
examples/: termux_battery_status.rs  termux_location.rs
src/: error.rs  lib.rs  termux_battery_status.rs  termux_location.rs
