[package]
name = "termux-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "termux_location"
required-features = ["example"]

[dependencies]
clap = { version = "3.2.16", features = ["derive"], optional = true }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.32"

[features]
default = []
example = ["clap"]
