[package]
name = "termux-rs"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "termux_location"
required-features = ["example"]

[[example]]
name = "termux_battery_status"

[dependencies]
clap = { version = "4.5.38", features = ["derive"], optional = true }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"

[features]
default = []
example = ["clap"]
